# sntp_request

./: Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: get_raw_timestamp.rs  get_time.rs
src/: lib.rs
tests/: all.rs
